<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.newlogic.smartscanner.result.IDPassResultActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:textAllCaps="true"
                    android:text="@string/label_result"
                    android:textColor="@color/idpass_orange"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/label_hex"
            android:textColor="@color/newlogic_black"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:text="54 65 73 74 20 51 52 20  Test QR\n43 6F 64 65              Code" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/card_pin_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:gravity="center"
        android:hint="@string/label_enter_pin"
        android:inputType="textPassword"
        android:maxLength="12"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pin_code_auth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/idpass_orange"
        android:fontFamily="@font/sourcesanspro_medium"
        android:text="@string/label_authenticate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_pin_code" />
</androidx.constraintlayout.widget.ConstraintLayout>