<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.newlogic.smartscanner.result.RawResultActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_result_raw"
                    android:textAllCaps="true"
                    android:textColor="@color/idpass_orange"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">


            <!-- HEADER -->
            <TextView
                android:id="@+id/txt_header_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/header"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_header_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <View
                android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lighter_grey"/>


            <!-- PAYLOAD -->
            <TextView
                android:id="@+id/txt_payload_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/payload"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_payload_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <View
                android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lighter_grey"/>


            <!-- RAW RESULT -->
            <TextView
                android:id="@+id/txt_raw_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/raw_result"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_raw_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <View
                android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lighter_grey"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>