<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.newlogic.smartscanner.result.ResultActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/sourcesanspro_medium"
                    android:text="@string/label_result"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/label_hex"
            android:textColor="@color/newlogic_black"
            android:textSize="16sp"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            tools:text="54 65 73 74 20 51 52 20  Test QR\n43 6F 64 65              Code" />

        <TextView
            android:id="@+id/image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="start"
            android:text="@string/label_result_image"
            android:textColor="@color/newlogic_black"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/image_result"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/label_content_description"
            android:visibility="gone"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_raw_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/label_result_raw"
            android:textColor="@color/newlogic_black"
            android:textSize="15sp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/layout_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_result_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="Error: Signature verification failed. Please
ensure a configuration profile was loaded" />

            <TextView
                android:id="@+id/text_signature_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="16dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:text="@string/label_signature_verified"
                android:textColor="@color/newlogic_black"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_checkbox_marked_circle" />

            <TextView
                android:id="@+id/text_result_sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sourcesanspro_medium"
                android:textSize="18sp"
                tools:text="key: value"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                tools:listitem="@layout/row_result" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_raw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:textIsSelectable="true"
            android:textSize="13sp"
            android:visibility="gone"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>